@@ -378,11 +378,14 @@ jQuery( function ( $ ) {
 		if (
 			$( '#wcpay-upe-element' ).length &&
 			! $( '#wcpay-upe-element' ).children().length &&
-			isUPEEnabled &&
-			! upeElement
+			isUPEEnabled
 		) {
+			if ( upeElement ) {
+				upeElement.mount( '#wcpay-upe-element' );
+			} else {
+				mountUPEElement();
+			}
 			renameGatewayTitle();
-			mountUPEElement();
 		}
 	} );
 
